--- a/第三方接口文档/接口相关文档/建筑项目接口V0.21.md
+++ b/第三方接口文档/接口相关文档/建筑项目接口V0.21.md
@@ -35,10 +35,10 @@ lastUpdateUser        |Long        |最后修改人
 请求URL ：/system/loginApi.whtml 
 
 ### 2.3 请求参数
-字段       |字段类型       |字段说明
-------------|-----------|-----------
-userName       |string        |登陆名
-password        |string        |密码
+字段       |字段类型       |字段说明|约束条件
+------------|-----------|-----------|-----------
+userName       |string        |登陆名|*
+password        |string        |密码|*
 
 示例
 ```  
@@ -66,19 +66,19 @@ password        |string        |密码
 请求URL ：/corporation/save.whtml 
 
 ### 3.3 请求参数
-字段       |字段类型       |字段说明
-------------|-----------|-----------
-companyCode        |string        |安全生产许可证号
-companyName        |string        |企业名称
-registerNo        |string        |社会信用代码
-socialId        |string        |社保编号 
+字段       |字段类型       |字段说明|约束条件
+------------|-----------|-----------|-----------
+companyCode        |string        |安全生产许可证号|*
+companyName        |string        |企业名称|*
+registerNo        |string        |社会信用代码|*
+socialId        |string        |社保编号 |*
 companyLevel        |string        |企业资质等级
-companyType        |int        |企业类型(值:总包)
-companyAddress        |string        |办公地址
-userName        |string        |法人代表 
-companyPhone        |string        |法人代表电话
-companyContact        |string        |联系人
-contactPhone         |string        |联系人电话
+companyType        |int        |企业类型(值:总包)|*
+companyAddress        |string        |办公地址|*
+userName        |string        |法人代表 |*
+companyPhone        |string        |法人代表电话|*
+companyContact        |string        |联系人|*
+contactPhone         |string        |联系人电话|*
 companyFox         |string        |传真 
 auditStatus         |string        |审核状态${auditStatus}
 auditMemo         |string        |备注 
@@ -153,43 +153,43 @@ auditMemo         |string        |备注
 请求URL ：/project/save.whtml 
 
 ### 4.3 请求参数
-字段       |字段类型       |字段说明
-------------|-----------|-----------
-name       |string        |项目名称
-parentId       |long        |所属地区${area} 
+字段       |字段类型       |字段说明|约束条件
+------------|-----------|-----------|-----------
+name       |string        |项目名称|*
+parentId       |long        |所属地区${area} |*
 type       |int        |项目类型 ${type}
-place       |string        |项目地址
+place       |string        |项目地址|*
 placePoint       |string        |坐标系, 经纬度信息,经纬度以分隔,例如: “120.118688,30.335848”' 
-projectType        |string        |项目类别${projectType}
+projectType        |string        |项目类别${projectType}|*
 qualityCode        |string        |质量报监编号
 securityCode        |string        |安全报监编号
-contractBeginDate        |date        |合同开始时间 
-contractEndDateDate        |date        |合同竣工时间 
-begin        |date        |开工时间
-end         |date        |竣工时间
-builder         |long        |施工企业 Id 
-builderCode        |String        |勘察单位名称 
-supervisor        |string        |监理企业名称
-supervisorCode         |string        |建设单位名称
-buildingSize        |float        |工程面积/平方米 
-buildingCost        |float        |共亨造价/万元
-contractNo         |String        |合同备案码 
-projectNo        |String        |项目编号 
+contractBeginDate        |date        |合同开始时间 |*
+contractEndDateDate        |date        |合同竣工时间 |*
+begin        |date        |开工时间|*
+end         |date        |竣工时间|*
+builder         |long        |施工企业 Id |*
+builderCode        |String        |勘察单位名称 |*
+supervisor        |string        |监理企业名称|*
+supervisorCode         |string        |建设单位名称|*
+buildingSize        |float        |工程面积/平方米 |*
+buildingCost        |float        |共亨造价/万元|*
+contractNo         |String        |合同备案码 |*
+projectNo        |String        |项目编号 |*
 winBiddingFile        |string        |中标通知书
 contractFile         |string        |备案合同
 projectManager        |String        |项目经理
 projectManagerPhone        |String        |联系电话
 fixDays        |String        |定额工期
-description         |String        |施工内容 
-injuryAuditStatus        |String        |工伤保险中心审核状态${auditStatus}  
+description         |String        |施工内容 |*
+injuryAuditStatus        |String        |工伤保险中心审核状态${auditStatus}  |*
 injuryAuditMemo        |string        |工伤保险中心审核备注 
-socialProvieCode          |string        |参保证明编号 
-socialProvieDate         |date        |参保时间
-managementAuditStatus         |String        |建管审核状态${auditStatus} 
+socialProvieCode          |string        |参保证明编号 |*
+socialProvieDate         |date        |参保时间|*
+managementAuditStatus         |String        |建管审核状态${auditStatus} |*
 managementAuditMemo         |String        |审核备注
 protectNo          |String        |安全施工措施备案号  
 license         |String        |施工许可证号   
-projectStatus         |string        |项目状态${projectStatus}
+projectStatus         |string        |项目状态${projectStatus}|*
 
 示例：
 ```  
@@ -304,16 +304,16 @@ projectStatus         |string        |项目状态${projectStatus}
 请求URL ：/distribution/save.whtml 
 
 ### 5.3 请求参数
-字段       |字段类型       |字段说明
-------------|-----------|-----------
-parentId       |Long        |总包id
-name       |string        |分包项目名称
-begin       |date        |开工时间
-end       |date        |竣工时间
-builder       |Long        |分包企业
-buildingCost       |float        |金额
-buildingSize      |float        |工程面积/平方米
-distributeContent        |string        |分包内容 
+字段       |字段类型       |字段说明|约束条件
+------------|-----------|-----------|-----------
+parentId       |Long        |总包id|*
+name       |string        |分包项目名称|*
+begin       |date        |开工时间|*
+end       |date        |竣工时间|*
+builder       |Long        |分包企业|*
+buildingCost       |float        |金额|*
+buildingSize      |float        |工程面积/平方米|*
+distributeContent        |string        |分包内容 |*
 description       |String        |备注
 示例：
 ```
@@ -379,11 +379,11 @@ description       |String        |备注
 请求URL ：/device/save.whtml 
 
 ### 6.3 请求参数
-字段       |字段类型       |字段说明
-------------|-----------|-----------
-name       |string        |分包项目名称
-sn       |string        |设备序列号
-projectId       |Long        |项目编号
+字段       |字段类型       |字段说明|约束条件
+------------|-----------|-----------|-----------
+name       |string        |设备名称|*
+sn       |string        |设备序列号|*
+projectId       |Long        |项目编号|*
 description       |String        |备注
 示例：
 ```
@@ -433,20 +433,20 @@ description       |String        |备注
 请求URL ：/userproject/save.whtml 
 
 ### 7.3 请求参数
-字段       |字段类型       |字段说明
-------------|-----------|-----------
-projectId    |long        |项目id
-userId       |string        |身份证号
-name       |string        |人员姓名
+字段       |字段类型       |字段说明|约束条件
+------------|-----------|-----------|-----------
+projectId    |long        |项目id|*
+userId       |string        |身份证号|*
+name       |string        |人员姓名|*
 joinStatus  |string        |进场状态${joinSatus}
-birthday       |String        |生日
-ptype       |int        |人员类型${ptype}
-gender       |int        |性别${gender}
-mobile       |string        |手机号码
+birthday       |String        |生日|*
+ptype       |int        |人员类型${ptype}|*
+gender       |int        |性别${gender}|*
+mobile       |string        |手机号码|*
 homeAddress       |String        |家庭住址
 currAddress       |String        |暂住地址
-classNo       |string        |班组
-workKind       |int        |工种
+classNo       |string        |班组|*
+workKind       |int        |工种|*
 memo       |String        |备注
 示例：
 ```
@@ -510,14 +510,14 @@ memo       |String        |备注
 请求URL ：/userproject/save.whtml 
 
 ### 8.3 请求参数
-字段       |字段类型       |字段说明
-------------|-----------|-----------
-projectId    |long        |项目id
-devId    |long        |考勤机器id
-userId       |string        |身份证号
-userName       |string        |人员姓名
-copyTime  |date        |考勤时间
-image       |String        |照片信息
+字段       |字段类型       |字段说明|约束条件
+------------|-----------|-----------|-----------
+projectId    |long        |项目id|*
+devId    |long        |考勤机器id|*
+userId       |string        |身份证号|*
+userName       |string        |人员姓名|*
+copyTime  |date        |考勤时间|*
+image       |String        |照片信息|*Base64
 memo       |String        |备注
 示例：
 ```
@@ -574,10 +574,10 @@ memo       |String        |备注
 请求URL ：/userproject/joinOutProject.whtml 
 
 ### 9.3 请求参数
-字段       |字段类型       |字段说明
-------------|-----------|-----------
-ids    |List<long>        |人员id集合
-evaluation       |string        |用工评价
+字段       |字段类型       |字段说明|约束条件
+------------|-----------|-----------|-----------
+ids    |List<long>        |人员id集合|*
+evaluation       |string        |用工评价|*
 
 示例：
 ```
@@ -594,10 +594,10 @@ evaluation       |string        |用工评价
 请求URL :/train/save.whtml 
 
 ### 10.3 请求参数
-字段       |字段类型       |字段说明
-------------|-----------|-----------
-trainCode    |String      |培训编号
-trainNode       |string        |培训名称
+字段       |字段类型       |字段说明|约束条件
+------------|-----------|-----------|-----------
+trainCode    |String      |培训编号|*
+trainNode       |string        |培训名称|*
 trainContent   |String      |培训内容
 attementName        |string        |文件名称
 attementPath       |string        |文件地址
@@ -681,12 +681,12 @@ attementPath       |string        |文件地址
 请求URL :/trainrecord/save.whtml 
 
 ### 11.3 请求参数
-字段       |字段类型       |字段说明
-------------|-----------|-----------
-projectId     |Long      |项目编号
-trainId       |Long        |培训指示
-trainTitle   |String      |培训主题
-trainDate        |date        |培训日期
+字段       |字段类型       |字段说明|约束条件
+------------|-----------|-----------|-----------
+projectId     |Long      |项目编号|
+trainId       |Long        |培训指示|*
+trainTitle   |String      |培训主题|
+trainDate        |date        |培训日期|*
 trainContent       |string        |培训内容
 attementName        |string        |文件名称
 attementPath       |string        |文件地址
