--- a/第三方接口文档/接口相关文档/建筑项目接口V0.21.md
+++ b/第三方接口文档/接口相关文档/建筑项目接口V0.21.md
@@ -1,10 +1,10 @@
 						建筑项目接入协议 
-概述 
-	本协议适用于第三方平台接入实名制项目,更新项目信息,上传分包,上传人员以及人员
+## 概述 
+本协议适用于第三方平台接入实名制项目,更新项目信息,上传分包,上传人员以及人员
 的考勤. 接入的账户由平台后台指定,如需上传企业和总包项目,请联系系统管理员
 授予相关权限. 
 	
-协议版本
+## 协议版本
 
 v0.21
 同步数据接口标准 
