--- a/人员信息-考勤记录下载接口文档/南通市地铁安全风险监控平台实名制数据接口协议v1.0.md
+++ b/人员信息-考勤记录下载接口文档/南通市地铁安全风险监控平台实名制数据接口协议v1.0.md
@@ -1,19 +1,19 @@
-##南通市地铁安全风险监控平台实名制数据接口协议 
+## 南通市地铁安全风险监控平台实名制数据接口协议 
 ###（V1.0 20180320）
-###一、概述
+### 一、概述
 该协议仅用于南通市地铁安全风险管控平台建设，采集的数据范围只限于此项目。
 该协议主要面向第三方数据接入开发人员，以规定双方获取 实名制数据的接口调用和报文规则。
-###二、约定
-1、双方采用HTTP协议进行通信；
-2、数据交互采用通用的webapi形式，不限定开发语言和框架；
-3、通过URL调用接口，并传输数据，返回的数据格式为JSON；
-4、参数不区分大小写，URL不区分大小写，URL最大长度为128
-###三、接口定义
-####3.1获取实名制后的人员数据
+### 二、约定
+#### 1、双方采用HTTP协议进行通信；
+#### 2、数据交互采用通用的webapi形式，不限定开发语言和框架；
+#### 3、通过URL调用接口，并传输数据，返回的数据格式为JSON；
+#### 4、参数不区分大小写，URL不区分大小写，URL最大长度为128
+### 三、接口定义
+#### 3.1获取实名制后的人员数据
 第三方系统调用此接口，获取此项目的人员数据，只返回实名认证后 的人员；可按固定时间段进 行数据获取，减小目标服务器负载。
-访问接口：(Get)
+##### 访问接口：(Get)
 $URL/api/rns/getemployeedata?token=&projectno==&sdate=&edate=
-输入参数：
+##### 输入参数：
 token:数字验证串（含身份认证信息，具体见附件 1）
 projectno:项目代码（双方约定的项目代码，具体见附件 2）
 sdate:"2018-06-2416:10" （开始时间，24 小时制）
@@ -39,11 +39,11 @@ edate:"2018-06-2416:30" （结束时间，24 小时制）
 ]
 }
 ```
-####3.2获取考勤数据
+#### 3.2获取考勤数据
 第三方系统调用此接口，获取此项目的考勤数据，只返回固定时段的数据；
-访问接口：(Get)
+##### 访问接口：(Get)
 $URL/api/rns/getdutydata?token=&projectno=&sdate=&edate=
-输入参数：
+##### 输入参数：
 token:数字验证串（含身份认证信息，具体见附件 1）
 projectno:项目代码（双方约定的项目代码，具体见附件 2）
 sdate:"2018-05-2416:10" （开始时间，24 小时制）
@@ -66,6 +66,6 @@ edate:"2018-05-2416:30" （结束时间，24 小时制）
 ]
 }
 ```
-###四、附件
-####4.1 TOKEN 的定义 约定的密钥为“NTDTL1TA04KQ”。
-####4.2项目代码 南通地铁一号线4标段，项目代码为“NTDTL1TA04”。
+### 四、附件
+#### 4.1 TOKEN 的定义 约定的密钥为“NTDTL1TA04KQ”。
+#### 4.2项目代码 南通地铁一号线4标段，项目代码为“NTDTL1TA04”。
