--- a/人员信息-考勤记录下载接口文档/人员信息-考勤记录下载接口.md
+++ b/人员信息-考勤记录下载接口文档/人员信息-考勤记录下载接口.md
@@ -1,6 +1,6 @@
-##人员信息-考勤记录下载接口
-###1. 登录接口 
-入力：用户名，密码 格式: JSON
+## 人员信息-考勤记录下载接口
+### 1. 登录接口 
+#### 入力：用户名，密码 格式: JSON
 格式
 ```
 {
@@ -29,9 +29,9 @@ token       |string        |返回token
 	project:${project}
 }
 ```
-###2.下载人员信息
+### 2.下载人员信息
 URL：/userproject/getUserInfoByPid.whtml
-入力：项目 ID 
+#### 入力：项目 ID 
 格式: JSON
 ```
 {projectId:[1,2]}
@@ -40,7 +40,7 @@ URL：/userproject/getUserInfoByPid.whtml
 参数名       |参数类型       |描述|约束条件
 ------------|-----------|-----------|-----------
 projectId       |List<Long>        |项目ID|*
-出力：人员基本信息，包括：姓名，身份证号，联系方式，性别，家庭住址，工种，班组，录入时间，身份证照片， 所属项目名称
+#### 出力：人员基本信息，包括：姓名，身份证号，联系方式，性别，家庭住址，工种，班组，录入时间，身份证照片， 所属项目名称
 出力格式:json
 ```
 {
@@ -52,7 +52,7 @@ projectId       |List<Long>        |项目ID|*
 	   }
 	}
 ```
-出力参数params:
+#### 出力参数params:
 参数名       |参数类型       |描述
 ------------|-----------|-----------
 userName       |string        |人员姓名
@@ -66,7 +66,7 @@ createDate       |string        |录入时间
 projectName       |string        |项目名
 builder       |string        |施工单位
 
-###3.下载人员身份证照片
+### 3.下载人员身份证照片
 URL：/userproject/getUserPhoto.whtml
 入力：项目 ID 
 格式: JSON
@@ -77,7 +77,7 @@ URL：/userproject/getUserPhoto.whtml
 参数名       |参数类型       |描述|约束条件
 ------------|-----------|-----------|-----------
 userId       |string        |身份证号|*
-出力：人员基本信息，包括：身份证照片
+#### 出力：人员基本信息，包括：身份证照片
 出力格式:json
 ```
 {
@@ -92,9 +92,9 @@ userId       |string        |身份证号|*
 photo       |string        |身份证照片(base64)
 
 
-###4.下载人员身份证照片
-URL：/userproject/getUserPhoto.whtml
-入力：项目 ID 
+### 4.下载考勤记录信息
+URL：/userproject/getUserCumulative.whtml
+#### 入力：项目 ID 
 格式: JSON
 ```
 {projectId:[1,2]}
@@ -126,6 +126,6 @@ photoDate       |string        |拍照时间
 ProjectName       |string        |项目名
 
 
-###5.其他说明
-####1) 在下载之前给相关人员一份项目与 ID 的对应关系表 
-####2) 如果当天已下载 3 次，则不允许下载
+### 5.其他说明
+#### 1) 在下载之前给相关人员一份项目与 ID 的对应关系表 
+#### 2) 如果当天已下载 3 次，则不允许下载
