--- a/人员信息-考勤记录下载接口文档/人员信息-考勤记录下载接口.md
+++ b/人员信息-考勤记录下载接口文档/人员信息-考勤记录下载接口.md
@@ -8,13 +8,13 @@
 	password:string
 }
 ```
-params
+#### params
 参数名       |参数类型       |描述|约束条件
 ------------|-----------|-----------|-----------
 userName       |string        |登录名|*
 password       |string        |密码|*
-出力
-Params
+#### 出力
+#### Params
 参数名       |参数类型       |描述
 ------------|-----------|-----------
 code       |string        |返回代码
@@ -36,7 +36,7 @@ URL：/userproject/getUserInfoByPid.whtml
 ```
 {projectId:[1,2]}
 ```
-入力参数：
+#### 入力参数：
 参数名       |参数类型       |描述|约束条件
 ------------|-----------|-----------|-----------
 projectId       |List<Long>        |项目ID|*
@@ -73,7 +73,7 @@ URL：/userproject/getUserPhoto.whtml
 ```
 {userId:string}
 ```
-入力参数：
+#### 入力参数：
 参数名       |参数类型       |描述|约束条件
 ------------|-----------|-----------|-----------
 userId       |string        |身份证号|*
@@ -86,7 +86,7 @@ userId       |string        |身份证号|*
 	   }
 	}
 ```
-出力参数params:
+#### 出力参数params:
 参数名       |参数类型       |描述
 ------------|-----------|-----------
 photo       |string        |身份证照片(base64)
@@ -99,7 +99,7 @@ URL：/userproject/getUserCumulative.whtml
 ```
 {projectId:[1,2]}
 ```
-入力参数：
+#### 入力参数：
 参数名       |参数类型       |描述|约束条件
 ------------|-----------|-----------|-----------
 userId       |List<Long>    |项目ID集合|*
@@ -115,7 +115,7 @@ userId       |List<Long>    |项目ID集合|*
 	   }
 	}
 ```
-出力参数params:
+#### 出力参数params:
 参数名       |参数类型       |描述
 ------------|-----------|-----------
 userName       |string        |人员姓名
