--- a/人员信息-考勤记录下载接口文档/人员信息-考勤记录下载接口-V0.2.md
+++ b/人员信息-考勤记录下载接口文档/人员信息-考勤记录下载接口-V0.2.md
@@ -1,12 +1,12 @@
-##人员信息-考勤记录下载接口
-###概述
+## 人员信息-考勤记录下载接口
+### 概述
 本协议适用于第三方平台下载人员信息和考勤记录信息. 接入的账户由平台后台
 指定,如需下载信息,请联系系统管理员授予相关权限.
-###协议版本
+### 协议版本
 v0.2
-##同步数据接口标准
-###1. 接口返回统一说明 
-采用JSON格式返回
+## 同步数据接口标准
+### 1. 接口返回统一说明 
+#### 采用JSON格式返回
 例如
 ```
 {
@@ -14,25 +14,25 @@ v0.2
 	msg:string
 }
 ```
-###发送参数：
+### 发送参数：
 接口提交时统一在header 上加入token 参数，token 参数在登录之后会返值
-###1. 登录接口 
+### 1. 登录接口 
 URL：/system/loginApi.whtml
-入力：用户名，密码 格式: JSON
-格式：JSON
+#### 入力：用户名，密码 格式: JSON
+#### 格式：JSON
 ```
 {
 	userName：string,
 	password:string
 }
 ```
-params
+#### params
 参数名       |参数类型       |描述|约束条件
 ------------|-----------|-----------|-----------
 userName       |string        |登录名|*
 password       |string        |密码|*
-出力
-Params
+#### 出力
+#### Params
 参数名       |参数类型       |描述
 ------------|-----------|-----------
 code       |string        |返回代码
@@ -47,10 +47,10 @@ projectId     |List<long>  |返回该用户可以下载的 项目 ID
 	project:[xx1,xx2]
 }
 ```
-###2.下载人员信息
+### 2.下载人员信息
 URL：/userproject/getUserInfoByPid.whtml
-入力：项目 ID 
-格式: JSON
+#### 入力：项目 ID 
+#### 格式: JSON
 ```
 {
 projectId:[1,2],
@@ -59,7 +59,7 @@ endDate:" YYYY-MM-DD hh:mi:ss"
 
 }
 ```
-入力参数：
+#### 入力参数：
 参数名       |参数类型       |描述|约束条件
 ------------|-----------|-----------|-----------
 projectId       |List<Long>        |项目ID|*
@@ -68,7 +68,7 @@ endDate       |Date       |结束时间|*
 说明： 用户只能下载开始时间与结束时间之间两天内的数据。
 出力：人员基本信息，包括：
 				姓名，身份证号，联系方式，性别，家庭住址，工种，班组，录入时间，身份证照片， 所属项目名称
-出力格式:json
+#### 出力格式:json
 ```
 {
 	"record":{
@@ -93,19 +93,19 @@ createDate       |string        |录入时间
 projectName       |string        |项目名
 builder       |string        |施工单位
 
-###3.下载人员身份证照片
+### 3.下载人员身份证照片
 URL：/userproject/getUserPhoto.whtml
-入力：身份证号
-格式: JSON
+#### 入力：身份证号
+#### 格式: JSON
 ```
 {userId:string}
 ```
-入力参数：
+#### 入力参数：
 参数名       |参数类型       |描述|约束条件
 ------------|-----------|-----------|-----------
 userId       |string        |身份证号|*
-出力：人员基本信息，包括：身份证照片
-出力格式:json
+#### 出力：人员基本信息，包括：身份证照片
+#### 出力格式:json
 ```
 {
 	"photo":{
@@ -113,15 +113,15 @@ userId       |string        |身份证号|*
 	   }
 	}
 ```
-出力参数params:
+#### 出力参数params:
 参数名       |参数类型       |描述
 ------------|-----------|-----------
 photo       |string        |身份证照片(base64)
 
 
-###4.下载考勤记录信息 
+### 4.下载考勤记录信息 
 URL：/userproject/getUserCumulative.whtml
-入力：项目 ID 
+#### 入力：项目 ID 
 格式: JSON
 ```
 {projectId:[1,2],
@@ -129,16 +129,16 @@ startDate:"YYYY-MM-DD hh:mi:ss",
 endDate:"YYYY-MM-DD hh:mi:ss"
 }
 ```
-入力参数：
+#### 入力参数：
 参数名       |参数类型       |描述|约束条件
 ------------|-----------|-----------|-----------
 projectId       |List<Long>    |项目ID集合|*
 startDate       |Date   |开始时间|*
 endDate       |Date     |结束时间|*
-说明： 用户只能下载开始时间与结束时间之间两天内的数据
+#### 说明： 用户只能下载开始时间与结束时间之间两天内的数据
 
-出力：人员基本信息，包括：姓名，身份证号，工种，班组，拍照时间，项目名称 
-出力格式:json
+#### 出力：人员基本信息，包括：姓名，身份证号，工种，班组，拍照时间，项目名称 
+#### 出力格式:json
 ```
 {
 	"record":{
@@ -149,7 +149,7 @@ endDate       |Date     |结束时间|*
 	   }
 	}
 ```
-出力参数params:
+#### 出力参数params:
 参数名       |参数类型       |描述
 ------------|-----------|-----------
 userName       |string        |人员姓名
@@ -160,10 +160,10 @@ photoDate       |string        |拍照时间
 ProjectName       |string        |项目名
 
 
-###5.下载考勤记录及考勤照片信息 
+### 5.下载考勤记录及考勤照片信息 
 URL：/userproject/getUserRecord.whtml 
-入力：项目 ID 
-格式: JSON 
+#### 入力：项目 ID 
+#### 格式: JSON 
 ```
 {
 	projectId:[1,2],
@@ -172,19 +172,19 @@ URL：/userproject/getUserRecord.whtml
 
 	}
 ```
-入力参数：
+#### 入力参数：
 参数名       |参数类型       |描述|约束条件
 ------------|-----------|-----------|-----------
 userId       |List<Long>    |项目ID集合|*
 startDate       |Date   |开始时间|*
 endDate       |Date     |结束时间|*
-说明：
- 1.用户只能下载开始时间与结束时间之间两天内的数据。
- 2.该接口每次只能下载一个项目考勤记录及照片
+#### 说明：
+##### 1.用户只能下载开始时间与结束时间之间两天内的数据。
+##### 2.该接口每次只能下载一个项目考勤记录及照片
  
-出力：人员基本信息，包括：
+#### 出力：人员基本信息，包括：
  姓名，身份证号，工种，班组，拍照时间，考勤照片,项目名称 
-格式: JSON 
+#### 格式: JSON 
 ```
 {
 	"record":{
@@ -196,7 +196,7 @@ endDate       |Date     |结束时间|*
 
 	}
 ```
-出力参数：
+#### 出力参数：
 参数名       |参数类型       |描述
 ------------|-----------|-----------
 userName       |string        |人员姓名
@@ -207,5 +207,5 @@ photoDate       |string        |拍照时间
 photo|string |考勤照片，格式：BASE64 
 ProjectName       |string        |项目名
 
-###其他说明 
-1) 如果当天同一用户下载同一项目已下载 3 次，则该用户不允许下载该项目。
+### 其他说明 
+#### 1) 如果当天同一用户下载同一项目已下载 3 次，则该用户不允许下载该项目。
