--- a/人员信息-考勤记录下载接口文档/人员信息-考勤记录下载接口.md
+++ b/人员信息-考勤记录下载接口文档/人员信息-考勤记录下载接口.md
@@ -103,7 +103,7 @@ URL：/userproject/getUserCumulative.whtml
 参数名       |参数类型       |描述|约束条件
 ------------|-----------|-----------|-----------
 userId       |List<Long>    |项目ID集合|*
-出力：人员基本信息，包括：姓名，身份证号，工种，班组，拍照时间，项目名称 
+#### 出力：人员基本信息，包括：姓名，身份证号，工种，班组，拍照时间，项目名称 
 出力格式:json
 ```
 {
