--- a/人员信息-考勤记录下载接口文档/人员信息-考勤记录下载接口-V0.2.md
+++ b/人员信息-考勤记录下载接口文档/人员信息-考勤记录下载接口-V0.2.md
@@ -66,8 +66,8 @@ projectId       |List<Long>        |项目ID|*
 startDate       |Date     |开始时间|*
 endDate       |Date       |结束时间|*
 #### 说明： 用户只能下载开始时间与结束时间之间两天内的数据。
-#### 出力：人员基本信息，包括：
-				姓名，身份证号，联系方式，性别，家庭住址，工种，班组，录入时间，身份证照片， 所属项目名称
+#### 出力：人员基本信息，
+包括：姓名，身份证号，联系方式，性别，家庭住址，工种，班组，录入时间，身份证照片， 所属项目名称
 #### 出力格式:json
 ```
 {
