--- a/人员信息-考勤记录下载接口文档/人员信息-考勤记录下载接口-V0.3.md
+++ b/人员信息-考勤记录下载接口文档/人员信息-考勤记录下载接口-V0.3.md
@@ -6,7 +6,7 @@
 v0.3
 ## 同步数据接口标准
 ### 1. 接口返回统一说明 
-####采用JSON格式返回
+#### 采用JSON格式返回
 例如
 ```
 {
@@ -58,7 +58,7 @@ endDate:" YYYY-MM-DD hh:mi:ss"
 
 }
 ```
-入力参数：
+#### 入力参数：
 参数名       |参数类型       |描述|约束条件
 ------------|-----------|-----------|-----------
 projectId       |List<Long>        |项目ID集合|*
