--- a/人员信息-考勤记录下载接口文档/人员信息-考勤记录下载接口-V0.5.md
+++ b/人员信息-考勤记录下载接口文档/人员信息-考勤记录下载接口-V0.5.md
@@ -1,24 +1,24 @@
-##人员信息-考勤记录下载接口
-###概述
+## 人员信息-考勤记录下载接口
+### 概述
 本协议适用于第三方平台下载人员信息和考勤记录信息. 接入的账户由平台后台
 指定,如需下载信息,请联系系统管理员授予相关权限.
-###协议版本
+### 协议版本
 v0.5
-##同步数据接口标准
-###1. 接口返回统一说明 
+## 同步数据接口标准
+### 1. 接口返回统一说明 
 采用JSON格式返回
-例如
+#### 例如
 ```
 {
 	code:${code},
 	msg:string
 }
 ```
-###发送参数：
+### 发送参数：
 接口提交时统一在header 上加入token 参数，token 参数在登录之后会返值
-###1. 登录接口 
+### 1. 登录接口 
 URL：/system/loginApi.whtml
-入力：用户名，密码 格式: JSON
+#### 入力：用户名，密码 格式: JSON
 格式：JSON
 ```
 {
@@ -26,13 +26,12 @@ URL：/system/loginApi.whtml
 	password:string
 }
 ```
-params
+#### params
 参数名       |参数类型       |描述|约束条件
 ------------|-----------|-----------|-----------
 userName       |string        |登录名|*
 password       |string        |密码|*
-出力
-Params
+#### 出力Params
 参数名       |参数类型       |描述
 ------------|-----------|-----------
 code       |string        |返回代码
@@ -48,9 +47,9 @@ projectId     |List<long>  |返回该用户可以下载的 项目 ID
 	project:[xx1,xx2]
 }
 ```
-###2.下载人员信息
+### 2.下载人员信息
 URL：/userproject/getUserInfoByPid.whtml
-入力：项目 ID 
+#### 入力：项目 ID 
 格式: JSON
 ```
 {
@@ -60,16 +59,16 @@ endDate:" YYYY-MM-DD hh:mi:ss"
 
 }
 ```
-入力参数：
+#### 入力参数：
 参数名       |参数类型       |描述|约束条件
 ------------|-----------|-----------|-----------
 projectId       |List<Long>        |项目ID集合|*
 startDate       |Date     |开始时间|*
 endDate       |Date       |结束时间|*
-说明： 用户只能下载开始时间与结束时间之间两天内的数据。
-出力：人员基本信息，包括：
-				姓名，身份证号，联系方式，性别，家庭住址，工种，班组，录入时间，身份证照片， 所属项目名称
-出力格式:json
+#### 说明： 用户只能下载开始时间与结束时间之间两天内的数据。
+#### 出力：人员基本信息，
+包括：姓名，身份证号，联系方式，性别，家庭住址，工种，班组，录入时间，身份证照片， 所属项目名称
+#### 出力格式:json
 ```
 {
 	"record":{
@@ -80,7 +79,7 @@ endDate       |Date       |结束时间|*
 	   }
 	}
 ```
-出力参数params:
+#### 出力参数params:
 参数名       |参数类型       |描述
 ------------|-----------|-----------
 userName       |string        |人员姓名
@@ -97,18 +96,18 @@ updateDate       |string        |最后更新时间
 joinStatus       |string        |当前状态
 companyName       |string        |施工单位名称
 supervisor       |string        |监理单位名称
-###3.下载人员身份证照片
+### 3.下载人员身份证照片
 URL：/userproject/getUserPhoto.whtml
-入力：身份证号
+#### 入力：身份证号
 格式: JSON
 ```
 {userId:string}
 ```
-入力参数：
+#### 入力参数：
 参数名       |参数类型       |描述|约束条件
 ------------|-----------|-----------|-----------
 userId       |string        |身份证号|*
-出力：人员基本信息，包括：身份证照片
+#### 出力：人员基本信息，包括：身份证照片
 出力格式:json
 ```
 {
@@ -117,15 +116,15 @@ userId       |string        |身份证号|*
 	   }
 	}
 ```
-出力参数params:
+#### 出力参数params:
 参数名       |参数类型       |描述
 ------------|-----------|-----------
 photo       |string        |身份证照片(base64)
 
 
-###4.下载考勤记录信息 
+### 4.下载考勤记录信息 
 URL：/userproject/getUserCumulative.whtml
-入力：项目 ID 
+#### 入力：项目 ID 
 格式: JSON
 ```
 {projectId:[1,2],
@@ -133,15 +132,15 @@ startDate:"YYYY-MM-DD hh:mi:ss",
 endDate:"YYYY-MM-DD hh:mi:ss"
 }
 ```
-入力参数：
+#### 入力参数：
 参数名       |参数类型       |描述|约束条件
 ------------|-----------|-----------|-----------
 projectId       |List<Long>    |项目ID集合|*
 startDate       |Date   |开始时间|*
 endDate       |Date     |结束时间|*
-说明： 用户只能下载开始时间与结束时间之间两天内的数据
+#### 说明： 用户只能下载开始时间与结束时间之间两天内的数据
 
-出力：人员基本信息，包括：姓名，身份证号，工种，班组，拍照时间，项目名称 
+#### 出力：人员基本信息，包括：姓名，身份证号，工种，班组，拍照时间，项目名称 
 出力格式:json
 ```
 {
@@ -153,7 +152,7 @@ endDate       |Date     |结束时间|*
 	   }
 	}
 ```
-出力参数params:
+#### 出力参数params:
 参数名       |参数类型       |描述
 ------------|-----------|-----------
 userName       |string        |人员姓名
@@ -164,9 +163,9 @@ photoDate       |string        |拍照时间
 ProjectName       |string        |项目名
 
 
-###5.下载考勤记录及考勤照片信息 
+### 5.下载考勤记录及考勤照片信息 
 URL：/userproject/getUserRecord.whtml 
-入力：项目 ID 
+#### 入力：项目 ID 
 格式: JSON 
 ```
 {
@@ -176,19 +175,20 @@ URL：/userproject/getUserRecord.whtml
 
 	}
 ```
-入力参数：
+#### 入力参数：
 参数名       |参数类型       |描述|约束条件
 ------------|-----------|-----------|-----------
 userId       |List<Long>    |项目ID集合|*
 startDate       |Date   |开始时间|*
 endDate       |Date     |结束时间|*
-说明：
- 1.用户只能下载开始时间与结束时间之间两天内的数据。
- 2.该接口每次只能下载一个项目考勤记录及照片
+#### 说明：
+##### 1.用户只能下载开始时间与结束时间之间两天内的数据。
+##### 2.该接口每次只能下载一个项目考勤记录及照片
  
-出力：人员基本信息，包括：
+#### 出力：人员基本信息，
+包括：
  姓名，身份证号，工种，班组，拍照时间，考勤照片,项目名称 
-格式: JSON 
+#### 格式: JSON 
 ```
 {
 	"record":{
@@ -200,7 +200,7 @@ endDate       |Date     |结束时间|*
 
 	}
 ```
-出力参数：
+#### 出力参数：
 参数名       |参数类型       |描述
 ------------|-----------|-----------
 userName       |string        |人员姓名
