--- a/实名制接口一览/盐城接口一览 .md
+++ b/实名制接口一览/盐城接口一览 .md
@@ -10,25 +10,25 @@
 接口模块                       |接口名字         |url           |备注
 ----------------------------|-----------------|------------------|------------------
 企业接口                    |getCorporationInterfaceGM  | /corporation/getCorporationInterfaceGM.whtml  | 
-							|getCorporationResultGM  |/corporation/getCorporationResultGM.whtml  | 
+----------------------------|getCorporationResultGM  |/corporation/getCorporationResultGM.whtml  | 
 项目接口                    |getProjectInterfaceGM  |/project/getProjectInterfaceGM.whtml  | 
-							|getProjectResultGM  |/project/getProjectResultGM.whtml | 
+----------------------------|getProjectResultGM  |/project/getProjectResultGM.whtml | 
 工人用工                    |getWorkerProjectRoleInterfaceGM  | /userproject/getWorkerProjectRoleInterfaceGM.whtml| 
-							|getWorkerProjectRoleResultGM  |/userproject/getWorkerProjectRoleResultGM.whtml  | 
+----------------------------|getWorkerProjectRoleResultGM  |/userproject/getWorkerProjectRoleResultGM.whtml  | 
 班组信息                    |getGroupInterfaceGM  |/group/getGroupInterfaceGM.whtml  | 
-							|getGroupResultGM  |/group/getGroupResultGM.whtml | 
+----------------------------|getGroupResultGM  |/group/getGroupResultGM.whtml | 
 
 ### 接口功能：劳务通定时取实名制数据(国标)
 ### Method:POST
 接口模块                       |接口名字         |url           |备注
 ----------------------------|-----------------|------------------|------------------
 企业接口                    |getCorporationInterfaceGM  |/corporation/getCorporationInterfaceGB.whtml| 
-							|getCorporationResultGM  |/corporation/getCorporationResultGB.whtml | 
+----------------------------|getCorporationResultGM  |/corporation/getCorporationResultGB.whtml | 
 项目接口                    |getProjectInterfaceGM  |/project/getProjectInterfaceGB.whtml  | 
-							|getProjectResultGM  |/project/getProjectResultGB.whtml | 
+----------------------------|getProjectResultGM  |/project/getProjectResultGB.whtml | 
 工人用工                    |getWorkerProjectRoleInterfaceGM  | /device/getDeviceInterfaceGB.whtml| 
-							|getWorkerProjectRoleResultGM  |/device/getDeviceResultGB.whtml  | 
+----------------------------|getWorkerProjectRoleResultGM  |/device/getDeviceResultGB.whtml  | 
 班组信息                    |getGroupInterfaceGM  |/group/getGroupInterfaceGB.whtml | 
-							|getGroupResultGM  |/group/getGroupResultGB.whtml | 
+----------------------------|getGroupResultGM  |/group/getGroupResultGB.whtml | 
 培训记录信息                |getTrainInterfaceGB  |/train/getTrainInterfaceGB.whtml| 
-							|getTrainResultGB  |/group/getGroupResultGB.whtml | 
+----------------------------|getTrainResultGB  |/group/getGroupResultGB.whtml | 
